package Characters;

public class Human extends Character{

    public Human(){
        description = "Human";
    }

    @Override
    public int getScore() {
        return 0;
    }
}



